# GlacierGenny

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_vs2017.bat  build_vs2019.bat  sdk_required_types.rcnet
examples/: EActorVoiceVariation.hpp  ZHitman5.hpp  ZRenderPostfilterParametersEntity.hpp
sdkgen/: CMakeLists.txt  Genny.hpp  Main.cpp  TypeRegistry.hpp
sdkgen/sdk/: Enums.hpp  GlacierModuleManager.hpp  Pool.cpp  Pool.hpp  ReClass_Internal.hpp  TArray.hpp  TEntityRef.hpp  TypeRegistry.cpp  TypeRegistry.hpp
sdkgen/utility/: Address.cpp  Config.cpp  Memory.cpp  Patch.cpp  Pattern.cpp
shared/: CMakeLists.txt
shared/sdk/: Enums.hpp  GlacierModuleManager.cpp  GlacierModuleManager.hpp  ReClass.hpp  ReClass_Internal.hpp  TArray.hpp  TEntityRef.hpp  TypeRegistry.cpp  TypeRegistry.hpp  ZEntityImpl.hpp  ZString.hpp
shared/utility/: Module.cpp  RTTI.cpp  RTTI.hpp  Scan.cpp  String.cpp
